[gd_scene load_steps=10 format=2]

[ext_resource path="res://tilesets/TilemapDay.png" type="Texture" id=1]
[ext_resource path="res://MapController.gd" type="Script" id=2]
[ext_resource path="res://UIController.gd" type="Script" id=3]
[ext_resource path="res://LogicController.gdns" type="Script" id=4]
[ext_resource path="res://Camera2D.gd" type="Script" id=5]
[ext_resource path="res://EntityController.gd" type="Script" id=6]
[ext_resource path="res://CharacterController.gd" type="Script" id=7]
[ext_resource path="res://TextureLoader.gd" type="Script" id=8]

[sub_resource type="TileSet" id=1]
0/name = "TilemapDay.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 0, 320, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 2097558, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 8388984, Vector2( 1, 1 ), 11141461, Vector2( 1, 2 ), 131133, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 524499, Vector2( 2, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="UIController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="UIController"]

[node name="Panel" type="Panel" parent="UIController/HUD"]
margin_left = 1.10907
margin_top = 4.57387
margin_right = 160.109
margin_bottom = 71.5744
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIController/HUD/Panel"]
margin_left = 56.2583
margin_top = 22.2166
margin_right = 96.2583
margin_bottom = 36.2166
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="UIController/HUD/Panel"]
anchor_left = 0.00225369
anchor_right = 0.00225369
margin_left = -1.35834
margin_top = 70.0
margin_right = 73.6417
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="UIController"]
show_behind_parent = true
anchor_mode = 0
current = true
script = ExtResource( 5 )

[node name="MapController" type="Node2D" parent="UIController"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="UIController/MapController"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196650, 0, 0 )

[node name="EntityController" type="Node2D" parent="UIController"]
script = ExtResource( 6 )

[node name="TextureLoader" type="Node2D" parent="UIController"]
script = ExtResource( 8 )

[node name="LogicController" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CharacterController" type="Node2D" parent="."]
script = ExtResource( 7 )
[connection signal="on_entity_click" from="UIController/EntityController" to="UIController" method="_on_EntityController_on_entity_click" flags=3]
[connection signal="created_entities" from="LogicController" to="UIController/EntityController" method="_on_LogicController_created_entities" flags=3]
[connection signal="deleted_entities" from="LogicController" to="UIController/EntityController" method="_on_LogicController_deleted_entities" flags=3]
[connection signal="map_loaded" from="LogicController" to="UIController" method="_on_LogicController_map_loaded" flags=3]
